# star_finder_with_game

./: .gitignore
1. Requirements/: Requirements.md  (+2 more)
3. Code/StarFinder/: CMakeLists.txt  StarFinder.cpp  StarFinder.h  main.cpp
3. Code/StarFinder/Config/: Config.h
3. Code/StarFinder/DataStructures/: DataStructures.h
3. Code/StarFinder/Dependencies/lodepng/: lodepng.cpp  lodepng.h
3. Code/StarFinder/Errors/: Errors.h
3. Code/StarFinder/Filters/Gaussian/: GaussianFilter.cpp  GaussianFilter.h
3. Code/StarFinder/Filters/Gray/: GrayFilter.cpp  GrayFilter.h
3. Code/StarFinder/Filters/Median/: MedianFilter.cpp  MedianFilter.h
3. Code/StarFinder/Filters/Sobel/: SobelFilter.cpp  SobelFilter.h
3. Code/StarFinder/Model/: Model.h  Params.h  SourceImage.h  Star.h  StarFinder.h  Stars.h
3. Code/StarFinder/Model/BaseModel/: BaseImage.cpp  BaseModel.h  BaseParams.cpp  BasePixel.cpp  BaseStar.cpp
3. Code/StarFinder/Model/BaseModel/Params/SourceImage/: BaseSourceImageParams.cpp  BaseSourceImageParams.h
3. Code/StarFinder/Model/BaseModel/SourceImage/: BaseSourceImage.cpp  BaseSourceImage.h
3. Code/StarFinder/Model/BaseModel/Star/: BaseStar.cpp  BaseStar.h
3. Code/StarFinder/Model/BaseModel/StarFinder/: BaseStarFinder.cpp  BaseStarFinder.h
3. Code/StarFinder/Model/BaseModel/Stars/: BaseStars.cpp  BaseStars.h
3. Code/StarFinder/OperationSystem/: FileSystem.cpp  OperationSystem.h
3. Code/StarFinder/Utils/: Coordinates.h  DisjointSet.h  HashTable.h  Iterators.h  SinglyLinkedList.h
3. Code/StarFinder/Utils/Images/: CopyMatrix.h  GrayImage.h  Image.h  Matrix.h  MatrixImage.h  MatrixImageDto.h  RGB_Image.h
3. Code/StarFinder/Utils/Pixels/: Pixel.h
3. Code/StarFinder/Utils/Pixels/Gray/: GrayPixel.cpp  GrayPixel.h
3. Code/StarFinder/Utils/Pixels/RGB/: RGB_Pixel.cpp  RGB_Pixel.h
3. Code/StarFinder/View/: View.h
(+11 files in other folders)
